# pyuff

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  README.txt  UFF.py  dict_test.ipynb  mask.pkl  pyproject.toml  pyuff Showcase.ipynb  pyuff.py  pyuff_Showcase.ipynb  requirements.dev.txt  requirements.txt  setup.py  test001.py  testUFF.py
data/: 1858.uff  2411 and 2414.uff  Artemis export - Geometry RPBC_setup_05_14102016_105117.uff  MPSTD#Set001_2024_10_08_10_27_07.uff  MPSTD#Set001_2024_10_08_10_27_07_fixed_test.uff  NX simulation output.uff  Sample_UFF58_ascii.uff  Sample_UFF58b_bin.uff  Simcenter_nxopen_thickness.uff  Simcenter_nxopen_thickness.unv  TestLab 161 164 18 15 82.uff  binary8byte.uff  dataset_milestone_in_header.uff  fea_simufact_tet_elements.unv  groups_test.uff  heat_engine_housing.uff  heat_engine_housing.unv  meas_point_1.txt  meas_point_2.txt  meas_point_3.txt  measurement.uff  mesh_set2412_to_convert.uff  mesh_set2412_to_convert_new.unv  non_ascii_header.uff  sample_dataset58_psd.uff  sample_dataset58_psd.unv  simcenter_exported_result.uff  simcenter_exported_result.unv  time-history-not-all-columns-filled.uff  uff55 sample_test record10.uff  uff55_translation.uff  uff55_translation_rotation.uff
docs/: requirements.txt
docs/source/: README.rst  (+9 more)
pyuff/: __init__.py  pyuff.py  tools.py
tests/: test_15.py  test_151.py  test_164.py  test_18.py  test_1858.py  test_2400.py  test_2411.py  test_2412.py  test_2414.py  test_2420.py  test_2429.py  test_2467.py  test_55.py  test_58.py  test_82.py  test_all.py  test_convert_2412_to_82.py
(+20 files in other folders)
